--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -18,24 +18,23 @@ permissions:
   contents: read
 
 jobs:
+  tinker:
+    defaults:
+      run:
+        shell: bash
+    runs-on: windows-latest
+    steps:
+    - uses: actions/checkout@v4
+    - run: go test .
+      working-directory: ./tools/metadata
   test:
     defaults:
       run:
         shell: bash
     strategy:
       matrix:
-        go-version: [1.x, 1.20.x]
+        go-version: [1.x]
         platform: [ubuntu-latest]
-        include:
-          # include windows, but only with the latest Go version, since there
-          # is very little in the library that is platform specific
-          - go-version: 1.x
-            platform: windows-latest
-
-          # only update test coverage stats with the most recent go version on linux
-          - go-version: 1.x
-            platform: ubuntu-latest
-            update-coverage: true
     runs-on: ${{ matrix.platform }}
 
     steps:
