--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -23,8 +23,19 @@ jobs:
     runs-on: windows-latest
     steps:
     - uses: actions/checkout@v4
-    - run: go test .
-      working-directory: ./tools/metadata
+    - uses: WillAbides/setup-go-faster@v1
+      id: setup-go
+      with:
+        go-version: '1.20.x'
+    - uses: actions/cache@v3
+      with:
+        path: |
+          ${{ steps.setup-go.outputs.GOCACHE }}
+          ${{ steps.setup-go.outputs.GOMODCACHE }}
+        key: ${{ runner.os }}-tinker-${{ hashFiles('./tools/go.mod') }}
+        restore-keys: ${{ runner.os }}-tinker-
+#    - run: go test .
+#      working-directory: ./tools/metadata
   test:
     defaults:
       run:
