--- a/.github/workflows/tinker.yaml
+++ b/.github/workflows/tinker.yaml
@@ -19,5 +19,7 @@ jobs:
             ${{ steps.setup-go.outputs.GOMODCACHE }}
           key: ${{ runner.os }}-tinker-${{ hashFiles('./tools/go.mod') }}
           restore-keys: ${{ runner.os }}-tinker-
+      - run: go mod download
+        working-directory: ./tools
 #    - run: go test .
 #      working-directory: ./tools/metadata
