--- a/.github/workflows/tinker.yaml
+++ b/.github/workflows/tinker.yaml
@@ -21,5 +21,5 @@ jobs:
           restore-keys: ${{ runner.os }}-tinker-
       - run: go mod download
         working-directory: ./tools
-#      - run: go test . -run TestValidate -v
-#        working-directory: ./tools/metadata
+      - run: go test . -run TestValidate -v
+        working-directory: ./tools/metadata
