--- a/.github/workflows/tinker.yaml
+++ b/.github/workflows/tinker.yaml
@@ -17,9 +17,9 @@ jobs:
           path: |
             ${{ steps.setup-go.outputs.GOCACHE }}
             ${{ steps.setup-go.outputs.GOMODCACHE }}
-          key: ${{ runner.os }}-tinker-${{ hashFiles('./tools/go.mod') }}
-          restore-keys: ${{ runner.os }}-tinker-
+          key: ${{ runner.os }}-tinker2-${{ hashFiles('./tools/go.mod') }}
+          restore-keys: ${{ runner.os }}-tinker2-
       - run: go mod download
         working-directory: ./tools
-      - run: go test . -run TestValidate -v
+      - run: go test . -run NOTHING -v
         working-directory: ./tools/metadata
