--- a/.github/workflows/tinker.yaml
+++ b/.github/workflows/tinker.yaml
@@ -21,5 +21,5 @@ jobs:
           restore-keys: ${{ runner.os }}-tinker2-
       - run: go mod download
         working-directory: ./tools
-      - run: go test . -run TestHelp -v
+      - run: go test . -run TestDebug -v
         working-directory: ./tools/metadata
