--- a/.github/workflows/linter.yml
+++ b/.github/workflows/linter.yml
@@ -12,5 +12,5 @@ jobs:
     - uses: actions/setup-go@v4
       with:
         go-version: 1.x
-        cache-dependency-path: "**/go.*"
+        cache-dependency-path: "**/go.sum"
     - run: script/lint.sh
